# cppembed

./: .editorconfig  CMakeLists.txt  README.md  TargetEmbedCppData.cmake  cppembed.py
cmake/: TargetEmbedCppData.cmake
example/: CMakeLists.txt  lorem.txt  test.cpp  test.cpp.in  test.h.in
example/as_cpp_file/: CMakeLists.txt  data.cpp.in  data.hpp  test.cpp
example/as_hpp_files/: CMakeLists.txt  pdf_data.hpp.in  test.cpp  txt_data.hpp.in
